refactor: String.format에서 formatted로 변경하기 #118